z-index fixed

--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -167,7 +167,6 @@ h1, h2{
 }
 
 .background__skills{
-	z-index: -1;
 	background-image: url('../images/skills.jpg');
 	&:before{
 		background-color: darken($theme_color, 30%);
@@ -191,6 +190,7 @@ h3{
 }
 
 .skills__inner{
+	position: relative;
 	padding: 0 $theme_gutter $theme_gutter $theme_gutter;
 }
 
